name:               Calculator
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          Calculator
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Add
                    Sub
                    Div
                    Mul
                    Home

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , yesod

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
